--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -26,7 +26,7 @@
                   <% if(editing) {%><%= product.description.trimLeft() %><% }%>
                 </textarea>
             </div>
-
+            <input type="hidden" name="productId" value="<%= product.id %>">
             <button class="btn" type="submit"><% if(editing) {%>Update Product<%} else {%>Add Product<% } %></button>
         </form>
     </main>
