--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,4 +3,15 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if(products.length > 0) {%>
+                <ul>
+                    <% products.forEach( product => { %>
+                        <li><%= product.productData.title%> (<%= product.qty%>)</li>
+                    <% }) %>
+                </ul>
+            <% } else {%>
+                <h1>No products in the cart!</h1>
+            <% } %>
+        </main>
         <%- include('../includes/end.ejs') %>
