--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -7,7 +7,13 @@
             <% if(products.length > 0) {%>
                 <ul>
                     <% products.forEach( product => { %>
-                        <li><%= product.productData.title%> (<%= product.qty%>)</li>
+                        <li>
+                            <p><%= product.productData.title%> (<%= product.qty%>)</p>
+                            <form action="/cart-delete-item" method="post">
+                                <input type="hidden" name="productId" value="<%= product.productData.id %>">
+                                <button class="btn" type="submit">Delete</button>
+                            </form>
+                        </li>
                     <% }) %>
                 </ul>
             <% } else {%>
