feature added -> adding product to cart

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,10 @@ form {
   display: inline;
 }
 
+.centered {
+  text-align: center;
+}
+
 .image {
   height: 20rem;
 }
@@ -201,6 +205,17 @@ form {
   color: white;
 }
 
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
@@ -209,8 +224,4 @@ form {
   #side-menu-toggle {
     display: none;
   }
-}
-
-.centered {
-  text-align: center;
 }
