--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,17 +1,19 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <% if(products.length > 0) {%>
-                <ul>
-                    <% products.forEach( product => { %>
-                        <li>
-                            <p><%= product.productData.title%> (<%= product.qty%>)</p>
-                            <form action="/cart-delete-item" method="post">
-                                <input type="hidden" name="productId" value="<%= product.productData.id %>">
-                                <button class="btn" type="submit">Delete</button>
+            <% if (products.length > 0) { %>
+                <ul class="cart__item-list">
+                    <% products.forEach(p => { %>
+                        <li class="cart__item">
+                            <h1><%= p.title %></h1>
+                            <h2>Quantity: <%= p.CartItems.quantity %></h2>
+                            <form action="/cart-delete-item" method="POST">
+                                <input type="hidden" value="<%= p.id %>" name="productId">
+                                <button class="btn danger" type="submit">Delete</button>
                             </form>
                         </li>
                     <% }) %>
