--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -9,24 +9,18 @@
     <main>
         <% if(errorMessage) {%>
             <div class="user-message user-message--error">
-                <%= errorMessage %>
+                <%= errorMessage%>
             </div>
         <% } %>
-        <form class="login-form" action="/signup" method="POST" novalidate>
-            <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-            </div>
+        <form class="login-form" action="/new-password" method="POST">
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
-            <div class="form-control">
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
-            </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Signup</button>
+            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
+            <input type="hidden" name="userId" value="<%= userId %>">
+            <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
