--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -12,7 +12,7 @@
                 <%= errorMessage %>
             </div>
         <% } %>
-        <form class="product-form" action="/admin/<% if(editing) {%>edit-product<%} else {%>add-product<% } %>" method="POST" novalidate>
+        <form class="product-form" action="/admin/<% if(editing) {%>edit-product<%} else {%>add-product<% } %>" method="POST" novalidate enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input
@@ -22,7 +22,7 @@
                     id="title"
                     value="<% if(editing || hasError) {%> <%= product.title.trim() %> <%} else {%><% } %>">
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input
                 class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>" 
@@ -30,6 +30,14 @@
                     name="imageUrl"
                     id="imageUrl"
                     value="<% if(editing || hasError) {%> <%= product.imageUrl %> <%} else {%><% } %>">
+            </div> -->
+            <div class="form-control">
+                <label for="image">Image</label>
+                <input
+                    type="file"
+                    name="image"
+                    id="image"
+                >
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
